noinst_LIBRARIES = libconf.a

libconf_a_SOURCES = dlgappearance.ui dlgadvanced.ui dlgnetwork.ui \
                    dlgdirectoriesbase.ui dlgDirectories.cpp \
                    settings.kcfgc

INCLUDES = -I$(srcdir)/.. -I$(srcdir)/../views $(all_includes)

METASOURCES = AUTO

kde_kcfg_DATA = kget.kcfg
